--- a/styles.css
+++ b/styles.css
@@ -12,9 +12,9 @@ body {
 
 
 #ukcilogo {
- color: white;
- font-size: 54pt;
- margin-right: 1%;
+    color: white;
+    font-size: 54pt;
+    margin-right: 1%;
 }
 
 #navbar {
@@ -22,6 +22,7 @@ body {
     padding: 1%;
     background-color: rgba(0, 0, 0, 0.6);
 }
+
 #subnavbar {
     font-size: 16px;
     border-top: 1px;
@@ -33,7 +34,8 @@ body {
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-#uulogo {
+#uulogo,
+#uulogof {
     width: 160px;
     height: 100px;
 }
@@ -59,16 +61,23 @@ body {
     text-transform: uppercase;
 }
 
-#keyinfotitle, #callforpapertitle, #topicsofinteresttitle {
+#keyinfotitle,
+#callforpapertitle,
+#topicsofinteresttitle {
     text-align: center;
 }
 
 .keyinfobody {
+    height: auto;
     text-align: center;
 }
 
 .keydate {
     padding-bottom: 0.1%;
+}
+
+.callforpaperbody {
+    height: 225px;
 }
 
 .topicofinterest {
@@ -105,6 +114,7 @@ span {
 #footerukcilogo {
     margin-bottom: 5%;
 }
+
 #footeruulogo {
     width: 160px;
     height: 100px;
@@ -132,13 +142,37 @@ span {
     }
 
     #ukciannouncement {
-        font-size: 3em;
+        font-size: 2em;
     }
 
     #footerukcilogo {
         margin-bottom: 2%;
     }
+
     #footeruulogo {
+        margin-bottom: 2%;
+    }
+
+    .callforpaperbody {
+        height: auto;
+    }
+
+    .keyinfobody {
+        height: auto;
+    }
+
+    #ukcilogo {
+        font-size: 26pt;
+    }
+
+    #uulogo {
+        height: 50px;
+        width: auto;
+    }
+
+    #uulogof {
+        height: 50px;
+        width: auto;
         margin-bottom: 2%;
     }
 }
@@ -166,6 +200,30 @@ span {
     #footerukcilogo {
         margin-bottom: 5%;
     }
+
+    .callforpaperbody {
+        height: auto;
+    }
+
+    .keyinfobody {
+        height: auto;
+    }
+
+    #ukcilogo {
+        font-size: 26pt;
+    }
+
+    #uulogo {
+        height: 50px;
+        width: auto;
+    }
+
+    #uulogof {
+        height: 50px;
+        width: auto;
+        margin-bottom: 2%;
+    }
+
 }
 
 /* // Large devices (desktops, 992px and up) */
@@ -190,6 +248,26 @@ span {
 
     #footerukcilogo {
         margin-bottom: 5%;
+    }
+
+    .callforpaperbody {
+        height: 320px;
+    }
+
+    .keyinfobody {
+        height: 180px;
+    }
+
+    #ukcilogo {
+        color: white;
+        font-size: 54pt;
+        margin-right: 1%;
+    }
+
+    #uulogo,
+    #uulogof {
+        width: 160px;
+        height: 100px;
     }
 }
 
@@ -216,6 +294,26 @@ span {
     #footerukcilogo {
         margin-bottom: 5%;
     }
+
+    .callforpaperbody {
+        height: 275px;
+    }
+
+    .keyinfobody {
+        height: 180px;
+    }
+
+    #ukcilogo {
+        color: white;
+        font-size: 54pt;
+        margin-right: 1%;
+    }
+
+    #uulogo,
+    #uulogof {
+        width: 160px;
+        height: 100px;
+    }
 }
 
 /* // XX-Large devices (larger desktops, 1400px and up) */
@@ -240,5 +338,25 @@ span {
 
     #footerukcilogo {
         margin-bottom: 5%;
+    }
+
+    .callforpaperbody {
+        height: 275px;
+    }
+
+    .keyinfobody {
+        height: 180px;
+    }
+
+    #ukcilogo {
+        color: white;
+        font-size: 54pt;
+        margin-right: 1%;
+    }
+
+    #uulogo,
+    #uulogof {
+        width: 160px;
+        height: 100px;
     }
 }
