--- a/styles.css
+++ b/styles.css
@@ -40,9 +40,9 @@ body {
     height: 100px;
 }
 
-.nav-item {
+/* .nav-item {
     margin-left: 1%;
-}
+} */
 
 .nav-link {
     color: white;
@@ -80,9 +80,36 @@ body {
     height: 225px;
 }
 
+.registrationbody {
+    text-align: center;
+}
+
 .topicofinterest {
     text-align: center;
     width: 100%;
+}
+
+.address {
+    text-align: center;
+    margin-bottom: -1%;
+}
+
+.safebelfastbody {
+    height: 155px;
+}
+
+.venuebedsbody {
+    height: auto;
+    text-align: center;
+}
+
+.travelbody {
+    height: auto;
+    text-align: center;
+}
+
+#belfastMap {
+    margin: 0;
 }
 
 /* This is especially for tpewriter effect on index page city hall banner, dont assign span to any other tags - sorry! */
