--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,13 @@ body {
     border-radius: 50%;
     background-color: #000; /* Bullet color */
     margin-right: 10px; /* Adjust spacing between bullet and text */
-  }
+}
+
+#belief2024link {
+    margin-top: -1%;
+    margin-bottom: 2%;
+    text-align: center;
+}
 
 /* This is especially for tpewriter effect on index page city hall banner, dont assign span to any other tags - sorry! */
 span {
@@ -225,6 +231,12 @@ span {
     .safebelfastbody {
         height: 200px;
     }
+
+    #belief2024link {
+        margin-top: -3%;
+        margin-bottom: 5%;
+        text-align: center;
+    }
 }
 
 /* // Medium devices (tablets, 768px and up) */
@@ -278,6 +290,12 @@ span {
         height: 200px;
     }
 
+    #belief2024link {
+        margin-top: -2%;
+        margin-bottom: 3%;
+        text-align: center;
+    }
+
 }
 
 /* // Large devices (desktops, 992px and up) */
@@ -327,6 +345,13 @@ span {
     .safebelfastbody {
         height: 155px;
     }
+
+    #belief2024link {
+        margin-top: -1%;
+        margin-bottom: 2%;
+        text-align: center;
+    }
+    
 }
 
 /* // X-Large devices (large desktops, 1200px and up) */
@@ -376,6 +401,12 @@ span {
     .safebelfastbody {
         height: 155px;
     }
+
+    #belief2024link {
+        margin-top: -1%;
+        margin-bottom: 2%;
+        text-align: center;
+    }
 }
 
 /* // XX-Large devices (larger desktops, 1400px and up) */
@@ -424,6 +455,12 @@ span {
 
     .safebelfastbody {
         height: 155px;
+    }
+
+    #belief2024link {
+        margin-top: -1%;
+        margin-bottom: 2%;
+        text-align: center;
     }
 }
 
