--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ body {
 #uulogof {
     width: 160px;
     height: 100px;
+    margin-right: 1%;
 }
 
 /* .nav-item {
@@ -340,6 +341,7 @@ span {
     #uulogof {
         width: 160px;
         height: 100px;
+        margin-right: 1%;
     }
 
     .safebelfastbody {
@@ -396,6 +398,7 @@ span {
     #uulogof {
         width: 160px;
         height: 100px;
+        margin-right: 1%;
     }
 
     .safebelfastbody {
@@ -451,6 +454,7 @@ span {
     #uulogof {
         width: 160px;
         height: 100px;
+        margin-right: 1%;
     }
 
     .safebelfastbody {
